Edit link of LRPT

--- a/_publications/2023-06-lrpt.md
+++ b/_publications/2023-06-lrpt.md
@@ -5,12 +5,12 @@ permalink: /publication/2023-06-lrpt
 excerpt: ''
 date: 2023-06-07
 venue: '2023 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)'
-paperurl: 'https://ieeexplore.ieee.org/abstract/document/10052997'
+paperurl: 'https://ieeexplore.ieee.org/document/10096197'
 citation: 'Vary S., Daglayan, H., Jacques, L., Absil, P-A. (2023). &quot;Low-rank plus sparse trajectory decomposition for direct exoplanet imaging&quot; <i>2023 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)</i>, pp. 1-5'
 ---
 We propose a direct imaging method for the detection of exoplanets based on a combined low-rank plus structured sparse model. For this task, we develop a dictionary of possible effective circular trajectories a planet can take during the observation time, elements of which can be efficiently computed using rotation and convolution operation. We design a simple alternating iterative hard-thresholding algorithm that jointly promotes a low-rank background and a sparse exoplanet foreground, to solve the non-convex optimisation problem. The experimental comparison on the β-Pictoris exoplanet benchmark dataset shows that our method has the potential to outperform the widely used Annular PCA for specific planet light intensities in terms of the Receiver operating characteristic (ROC) curves.
 
-[Download paper here](https://ieeexplore.ieee.org/abstract/document/10052997)
+[Download paper here](https://ieeexplore.ieee.org/document/10096197)
 [code](https://github.com/hazandaglayan/trajectorlets)
 
 Recommended citation: Vary S., Daglayan, H., Jacques, L., Absil, P-A. (2023). "Low-rank plus sparse trajectory decomposition for direct exoplanet imaging." 2023 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP), pp. 1-5.
